--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </span>
 
                         <p>
-                            <font size="4">Ph.D. Student in Computer System Architecture<br>
+                            <font size="4">Ph.D. in Computer System Architecture<br>
                                 <a href="http://english.wnlo.hust.edu.cn/">Wuhan National Laboratory for
                                     Optoelectronics</a><br>
                                 <a href="http://english.cs.hust.edu.cn/">School of Computer Science and
@@ -77,16 +77,16 @@
                     <font size="4">
                         <b>Brief Biography:</b>
                     </font>
-                    <font size="4.0"> Ming Zhang is a Ph.D. student advised by <a
-                            href="https://csyhua.github.io/csyhua/index.html">Prof. Yu Hua</a>
-                        at Huazhong University of Science and Technology (HUST).
-                        He is a visiting Ph.D. student advised by <a
-                            href="https://www.eecg.toronto.edu/~yuan/Home.html">Prof. Ding Yuan</a> at University of
-                        Toronto during 2023-2024 in Canada.
-                        He obtained the B.E. degree in Computer Science from HUST in 2019.
+                    <font size="4.0"> Ming Zhang received Ph.D. degree in Computer System Architecture (advised by
+                        <a href="https://csyhua.github.io/csyhua/index.html">Prof. Yu Hua</a>) from Huazhong University
+                        of Science and Technology (HUST) in 2024.
+                        He was a visiting Ph.D. student in the Department of Electrical and Computer Engineering (advised by <a
+                        href="https://www.eecg.toronto.edu/~yuan/Home.html">Prof. Ding Yuan</a>) at the University of
+                        Toronto during 2023 - 2024.
+                        He received B.E. degree in Computer Science from HUST in 2019.
                         He has published papers in major conferences and journals in the areas of computer systems and
                         architectures, including OSDI, FAST, HPCA, DAC, ACM TOS. His research interests include
-                        memory system, system for AI, distributed system, and computer architecture, focusing on improving
+                        memory and storage system, distributed system, and computer architecture, focusing on improving
                         performance and reliability.
                     </font>
                 </p>
@@ -108,7 +108,10 @@
                     <!-- <p style="margin-bottom: 0em"> </p> -->
                     <p align="justify">
                         <font size="4.0">
-                            <b>[FAST]</b> Menglei Chen, Yu Hua, Zhangyu Chen, <b>Ming Zhang</b>, Gen Dong. "GPHash: An Efficient Hash Index for GPU with Byte-Granularity Persistent Memory". In 23rd USENIX Conference on File and Storage Technologies (FAST), Santa Clara, California, USA, February 25-27, 2025.
+                            <b>[FAST]</b> Menglei Chen, Yu Hua, Zhangyu Chen, <b>Ming Zhang</b>, Gen Dong. "GPHash: An
+                            Efficient Hash Index for GPU with Byte-Granularity Persistent Memory". In 23rd USENIX
+                            Conference on File and Storage Technologies (FAST), Santa Clara, California, USA, February
+                            25-27, 2025.
                             <br>
                             <font size=4pt face="Georgia">(CCF A, Top-Tier Conference in Storage System)
                             </font>
@@ -221,7 +224,8 @@
                         <h2>Professional Services</h2>
                     </div>
                     <p style="margin-bottom: 0em">
-                        <font size="4.0">1. Reviewer for <a href="https://dl.acm.org/journal/tods">ACM Transactions on Database Systems</a> in 2024</font>
+                        <font size="4.0">1. Reviewer for <a href="https://dl.acm.org/journal/tods">ACM Transactions on
+                                Database Systems</a> in 2024</font>
                     </p>
                     <p style="margin-bottom: 0em">
                         <font size="4.0">2. Reviewer for <a href="https://www.springer.com/journal/11390/">Journal of
@@ -240,7 +244,7 @@
                     </div>
 
                     <div class="page-header">
-                        <h4>During Ph.D. at HUST (2019-Present)</h4>
+                        <h4>During Ph.D. at HUST (2019-2024)</h4>
                     </div>
 
                     <ul>
