--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 
                         <p>
                             <font size="4">Ph.D. in Computer System Architecture<br>
+                                <a href="http://english.wnlo.hust.edu.cn/">Wuhan National Laboratory for
+                                    Optoelectronics</a><br>
                                 <a href="http://english.cs.hust.edu.cn/">School of Computer Science and
                                     Technology</a><br>
                                 <a href="http://english.hust.edu.cn/">Huazhong University of Science and
