--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                     <font size="4">
                         <b>Brief Biography:</b>
                     </font>
-                    <font size="4.0"> Ming Zhang received Ph.D. degree in Computer System Architecture (advised by
+                    <font size="4.0">
+                        Ming Zhang received Ph.D. degree in Computer System Architecture (advised by
                         <a href="https://csyhua.github.io/csyhua/index.html">Prof. Yu Hua</a>) from Huazhong University
                         of Science and Technology (HUST) in 2024.
                         He was a visiting Ph.D. student in the Department of Electrical and Computer Engineering (advised by <a
@@ -86,8 +87,12 @@
                         He received B.E. degree in Computer Science from HUST in 2019.
                         He has published papers in major conferences and journals in the areas of computer systems and
                         architectures, including OSDI, FAST, HPCA, DAC, ACM TOS. His research interests include
-                        memory and storage system, distributed system, and computer architecture, focusing on improving
-                        performance and reliability.
+                        memory and storage system, distributed system, and computer architecture. 
+                    </font>
+                    <br>
+                    <br>
+                    <font size = "4.0">
+                      I am currently an OS researcher at Huawei CBG, working on improving the performance of our daily devices. 
                     </font>
                 </p>
                 <hr>
@@ -117,7 +122,7 @@
                             </font>
                         </font>
                         <br>
-                        [Paper: to appear]
+                        [<a href="https://light-chenml.github.io/resources/2025-FAST-GPHash.pdf">Paper</a>]
                         <br><br>
                     </p>
                     <p align="justify">
