--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <br>
                     <br>
                     <font size = "4.0">
-                      I am currently an OS researcher at Huawei CBG, working on improving the performance of our daily devices. 
+                      I am currently an OS researcher at Huawei CBG, working on improving the performance of our daily-use devices. 
                     </font>
                 </p>
                 <hr>
