--- a/index.html
+++ b/index.html
@@ -255,12 +255,17 @@
                     <ul>
                         <p style="margin-bottom: 0em">
                             <font size="4.0">
-                                <li>National Scholarship for Doctoral Students, 2023</li>
+                                <li>CCF博士学位论文激励计划提名, 2025</li>
                             </font>
                         </p>
                         <p style="margin-bottom: 0em">
                             <font size="4.0">
-                                <li>National Scholarship for Doctoral Students, 2022</li>
+                                <li>博士研究生国家奖学金 (National Scholarship for Doctoral Students), 2023</li>
+                            </font>
+                        </p>
+                        <p style="margin-bottom: 0em">
+                            <font size="4.0">
+                                <li>博士研究生国家奖学金 (National Scholarship for Doctoral Students), 2022</li>
                             </font>
                         </p>
                         <p style="margin-bottom: 0em">
@@ -270,43 +275,43 @@
                         </p>
                         <p style="margin-bottom: 0em">
                             <font size="4.0">
-                                <li>Merit Postgraduate, 2023</li>
+                                <li>三好研究生 (Merit Postgraduate), 2023</li>
                             </font>
                         </p>
                         <p style="margin-bottom: 0em">
                             <font size="4.0">
-                                <li>Huawei Scholarship, 2022</li>
+                                <li>华为奖学金 (Huawei Scholarship), 2022</li>
                             </font>
                         </p>
                         <p style="margin-bottom: 0em">
                             <font size="4.0">
-                                <li>Merit Postgraduate, 2022</li>
+                                <li>三好研究生 (Merit Postgraduate), 2022</li>
                             </font>
                         </p>
                         <p style="margin-bottom: 0em">
                             <font size="4.0">
-                                <li>Zhixing Excellence Scholarship, 2020
+                                <li>知行奖学金 (Zhixing Excellence Scholarship), 2020
                             </font>
                         </p>
                         <p style="margin-bottom: 0em">
                             <font size="4.0">
-                                <li>Merit Postgraduate, 2020</li>
+                                <li>三好研究生 (Merit Postgraduate), 2020</li>
                             </font>
                         </p>
                         <p style="margin-bottom: 0em">
                             <font size="4.0">
-                                <li>First-class Scholarship for Doctoral Students, 2019~2023. Courses
+                                <li>一等学业奖学金 (First-class Scholarship for Doctoral Students), 2019~2023. Courses
                                     Weighted Average Score Ranked No.1 in Major</li>
                             </font>
                         </p>
                         <p style="margin-bottom: 0em">
                             <font size="4.0">
-                                <li>Active Participants in Extracurricular Activities, 2021
+                                <li>社会活动积极分子 (Active Participants in Extracurricular Activities), 2021
                             </font>
                         </p>
                         <p style="margin-bottom: 0em">
                             <font size="4.0">
-                                <li>Scholarship for Excellent Source of Postgraduates, 2019
+                                <li>优秀生源奖学金 (Scholarship for Excellent Source of Postgraduates), 2019
                             </font>
                         </p>
                         </li>
@@ -320,7 +325,7 @@
                     <ul>
                         <p style="margin-bottom: 0em">
                             <font size="4.0">
-                                <li>Outstanding Graduates and B.E. Thesis, 2019
+                                <li>优秀毕业生，优秀毕业论文 (Outstanding Graduates and B.E. Thesis), 2019
                             </font>
                         </p>
                         </li>
@@ -333,13 +338,13 @@
                         </li>
                         <p style="margin-bottom: 0em">
                             <font size="4.0">
-                                <li>People Scholarship, 2018
+                                <li>人民奖学金 (People Scholarship), 2018
                             </font>
                         </p>
                         </li>
                         <p style="margin-bottom: 0em">
                             <font size="4.0">
-                                <li>Outstanding Undergraduates in Term of Academic Performance（本科特优生）, 2017
+                                <li>华中科技大学本科特优生(Outstanding Undergraduates in Term of Academic Performance), 2017
                             </font>
                         </p>
                         </li>
@@ -351,7 +356,7 @@
                         </li>
                         <p style="margin-bottom: 0em">
                             <font size="4.0">
-                                <li>People Scholarship, 2017
+                                <li>人民奖学金 (People Scholarship), 2017
                             </font>
                         </p>
                         <p style="margin-bottom: 0em">
@@ -362,7 +367,7 @@
                         </li>
                         <p style="margin-bottom: 0em">
                             <font size="4.0">
-                                <li>People Scholarship, 2016
+                                <li>人民奖学金 (People Scholarship), 2016
                             </font>
                         </p>
                     </ul>
